[Glitch] Fix dismiss button overlapping with text in dismissable banners
Port 2a4fcc51fd44cab3e837e43e8f8dd84fefb97729 to glitch-soc

--- a/app/javascript/flavours/glitch/styles/components/columns.scss
+++ b/app/javascript/flavours/glitch/styles/components/columns.scss
@@ -1044,9 +1044,7 @@ $ui-header-height: 55px;
   }
 
   &__action {
-    position: absolute;
-    inset-inline-end: 0;
-    top: 0;
+    float: right;
     padding: 15px 10px;
 
     .icon-button {
